<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:background="@drawable/background2"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/ConstraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/time"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/showTime"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/showTime"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/step"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/showTime"
            app:layout_constraintStart_toEndOf="@+id/showTime" />

        <TextView
            android:id="@+id/showStep"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/showStep"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/step"
            app:layout_constraintTop_toTopOf="@+id/step" />

    </android.support.constraint.ConstraintLayout>

    <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/absoluteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_x="0dp"
            android:layout_y="0dp"
            android:background="@drawable/huangzhong"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_x="80dp"
            android:layout_y="0dp"
            android:background="@drawable/caocao"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            tools:layout_editor_absoluteX="80dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_x="240dp"
            android:layout_y="0dp"
            android:background="@drawable/zhangfei"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_x="0dp"
            android:layout_y="160dp"
            android:background="@drawable/machao"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_x="80dp"
            android:layout_y="160dp"
            android:background="@drawable/guanyu"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="80dp"
            android:layout_height="160dp"
            android:layout_x="240dp"
            android:layout_y="160dp"
            android:background="@drawable/zhaoyun"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_x="80dp"
            android:layout_y="240dp"
            android:background="@drawable/bing"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_x="160dp"
            android:layout_y="240dp"
            android:background="@drawable/bing"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_x="0dp"
            android:layout_y="320dp"
            android:background="@drawable/bing"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_x="240dp"
            android:layout_y="320dp"
            android:background="@drawable/bing"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </AbsoluteLayout>


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ConstraintLayout-inner"
        android:layout_width="399dp"
        android:layout_height="275dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/ConstraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/absoluteLayout"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/exit"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradient"
            android:onClick="exit"
            android:text="@string/exit"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/back"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradient"
            android:onClick="back"
            android:text="@string/back"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/newGame"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradient"
            android:onClick="restart"
            android:text="@string/newGame"
            app:layout_constraintStart_toEndOf="@+id/next"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/next"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradient"
            android:onClick="next"
            android:text="下一关"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradient"
            android:onClick="toHome"
            android:text="@string/home"
            app:layout_constraintStart_toEndOf="@+id/newGame"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="-50dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>